--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,60 +1,44 @@
-<!doctype html>
-<html lang="en">
+<html>
     <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <!-- Bootstrap CSS -->
+        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <!--link css file-->
-        <link href="/public/css/index.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+         
+         <link rel="stylesheet" href="index.css">
     </head>
-
     <body>
-        <p>{{ user_template }} love Flask APP </p>
-
-        <!--hang cloth button-->
-        <div class="container">
-            <div class="row justify-content-md-center">
-                <div class="col">
-                    <button id="hang_btn" type="button" class="btn btn-info">
-                        <p id="hang">晾衣服</p>
-                    </button>
+        <div class="" id="infoblock">
+            <button type="button" class="btn btn-warning" id="dryingbtn"> 晾衣服 </button>
+            <div class="" >
+                <div class="">
+                    <p class="inline">15</p>
+                    <p class="inline">件</p>
+                    <p class="inline">衣服</p>
                 </div>
-            </div>
-        </div>
-
-        <!--status-->
-        <div class="cloth not_display">
-            <!--up-->
-            <div>
-                <div class="left">
-                    <p class="cloth_number">15</p>
-                    <p class="word">件</p>
+                <div class="">
+                    <p class="inline">狀態:</p>
+                    <p class="inline">乾囉!</p>
+                </div> 
+                <div class="">
+                    <p class="inline">晾衣日期:</p>
+                    <p class="inline">2019/8/6</p>
                 </div>
-                <div class="right">
-                    <p class="status" id="hehe">目前狀態：已經晾乾</p>
-                    <p class="info">完成晾衣時間:5/10 19:43</p>
-                    <p class="info">預計晾乾時間:5/12 12:30</p>
-                </div>
-            </div>
 
-            <!--down-->
-            <div>
-                <button type="button" class="collect_btn btn btn-dark">
-                    <p>收衣服</p>
-                </button>
+                <button type="button" class="btn btn-success">我要收衣服!</button>
             </div>
-        </div>
+       </div>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="main.js"></script>
+       <div class="" id="dryingmode">
+           <p>晾衣服模式</p>
+           <div class="inline">目前晾<span id="clothcount"> <span></div>
+           <div class=""">件衣服</div>
+           <button type="button" class="btn btn-info" id="nextcloth">下一件</button>
+           <button type="button" class="btn btn-danger" id="enddrybtn">結 束</button>
+
+       </div>
+
     </body>
 </html>
+
+<script src="page2.js"></script>
