--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,8 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
          
-         <link rel="stylesheet" href="index.css">
+         <link rel="stylesheet" href="/public/css/index.css">
+   		 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">	 
     </head>
     <body>
         <div class="" id="infoblock">
@@ -37,8 +38,6 @@
            <button type="button" class="btn btn-danger" id="enddrybtn">結 束</button>
 
        </div>
-
+       <script src="/public/js/index.js"></script>
     </body>
 </html>
-
-<script src="page2.js"></script>
