finish server receive request and response

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,11 +33,12 @@
        <div class="" id="dryingmode">
            <p>晾衣服模式</p>
            <div class="inline">目前晾<span id="clothcount"> <span></div>
-           <div class=""">件衣服</div>
+           <div class="">件衣服</div>
            <button type="button" class="btn btn-info" id="nextcloth">下一件</button>
            <button type="button" class="btn btn-danger" id="enddrybtn">結 束</button>
 
        </div>
+       <p id="test_js"> </p>
        <script src="/public/js/index.js"></script>
     </body>
 </html>
