--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,43 +1,48 @@
 <html>
     <head>
-        
+
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-         
-         <link rel="stylesheet" href="/public/css/index.css">
-   		 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">	 
+
+        <link rel="stylesheet" href="./css/index.css">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">	 
     </head>
     <body>
-        <div class="" id="infoblock">
-            <button type="button" class="btn btn-warning" id="dryingbtn"> 晾衣服 </button>
-            <div class="" >
-                <div class="">
-                    <p class="inline">15</p>
-                    <p class="inline">件</p>
-                    <p class="inline">衣服</p>
-                </div>
-                <div class="">
-                    <p class="inline">狀態:</p>
-                    <p class="inline">乾囉!</p>
-                </div> 
-                <div class="">
-                    <p class="inline">晾衣日期:</p>
-                    <p class="inline">2019/8/6</p>
-                </div>
-
-                <button type="button" class="btn btn-success">我要收衣服!</button>
+        <div id="mode_status">
+            <div class="" id="status_title">
             </div>
-       </div>
+            <div class="" id="infoblock">
+                <div class="">
+                    <button type="button" class="btn btn-warning rounded-circle dryclothbtn" id="dryingbtn"> 晾衣服 </button>
+                </div>
+                <div class="">
+                    <div class="clothnum">
+                        <p class="inline">15</p>
+                        <p class="inline">件</p>
+                    </div>
+                    <div class="state">
+                        <p class="inline">狀態:</p>
+                        <p class="inline">乾囉!</p>
+                    </div> 
+                    <div class="time">
+                        <p class="inline">晾衣時間:</p>
+                        <p class="inline">2019/8/6</p>
+                    </div>
 
-       <div class="" id="dryingmode">
-           <p>晾衣服模式</p>
-           <div class="inline">目前晾<span id="clothcount"> <span></div>
-           <div class=""">件衣服</div>
-           <button type="button" class="btn btn-info" id="nextcloth">下一件</button>
-           <button type="button" class="btn btn-danger" id="enddrybtn">結 束</button>
+                    <button type="button" class="btn btn-success">我要收衣服!</button>
+                </div>
+            </div>
 
-       </div>
-       <script src="/public/js/index.js"></script>
+            <div class="" id="dryingmode">
+                <p>晾衣服模式</p>
+                <div class="inline">目前晾<span id="clothcount"> <span></div>
+                <div class=""">件衣服</div>
+                <button type="button" class="btn btn-info" id="nextcloth">下一件</button>
+                <button type="button" class="btn btn-danger" id="enddrybtn">結 束</button>
+
+            </div>
+        </div>
+        <script src="./js/index.js"></script>
     </body>
 </html>
